--- a/scothostorg/src/style/style.css
+++ b/scothostorg/src/style/style.css
@@ -2,6 +2,11 @@ a {
   text-decoration: none;
 }
 
+.nav__links {
+  position: relative;
+  left: 35%;
+}
+
 .scot__host__logo {
   height: 100px;
   margin-right: 10px;
@@ -11,9 +16,14 @@ a {
 position: relative;
 left: 16%;
   width: 70%;
-  border-bottom: 1px solid rgb(96, 130, 201);
+  border-bottom: 1px solid rgba(96, 129, 201, 0.587);
   margin: 5px;
   
+}
+
+.statement {
+    position: relative;
+    right: 10%;
 }
 
 .statement1 {
@@ -25,6 +35,7 @@ right: 50px;
 
 .statement2 {
   width: 90%;
+  text-align: center;
 }
 .statement2 > h4 {
   width: 90%;
@@ -38,15 +49,16 @@ right: 50px;
 .s1 {
     color: rgb(10, 6, 6);
     position: relative;
-    left: 120px;
+    left: 38%;
     bottom: 10px;
     top: 1px;
     width: 30%;
     font-size: 35px;
+    border-bottom: 1px solid rgba(0, 0, 255, 0.286);
 }
 
 .s2 {
-  width: 94%;
+  width: 100%;
     color: rgb(106, 103, 103);
     position: relative;
     left: 70px;
@@ -87,9 +99,12 @@ font-size: 15px;
     font-size: 30px;
     position: relative;
     margin-top: 20px;
-    left: 20%;
-    width: 40%;
+   left: 11%;
+    width: 80%;
     color: rgb(44, 41, 41);
+    text-align: center;
+        border-bottom: 1px solid rgba(0, 0, 255, 0.286);
+        margin-bottom: 40px;
 }
 
 .visa {
@@ -148,9 +163,12 @@ font-size: 15px;
     font-size: 40px;
 }
 .travel {
+    margin-top: 40px;
+    margin-bottom: 30px;
     border: 2px solid black;
 }
 
 .footer {
     background-color:rgba(246, 246, 246, 0.494);
+    margin-bottom: 30px;
 }
