--- a/scothostorg/src/style/style.css
+++ b/scothostorg/src/style/style.css
@@ -591,3 +591,9 @@ font-weight: bold;
 .listGroupTitle {
   background-color: rgba(41, 150, 223, 0.283);
 }
+
+.final {
+  position: relative;
+  top: 100px;
+  font-weight: bold;
+}
