--- a/scothostorg/src/style/style.css
+++ b/scothostorg/src/style/style.css
@@ -174,6 +174,10 @@
    position: relative;
    left: 20% !important;
  }
+
+ .card {
+   width: 105% !important;
+ }
 }
 
 @media (min-width: 1255px) {
@@ -626,6 +630,12 @@ body {
 .free__travel {
   width: 80%;
   margin-right: 50px;
+}
+
+.free__travel h4{
+  position: relative;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .popular__routes {
