--- a/scothostorg/src/style/style.scss
+++ b/scothostorg/src/style/style.scss
@@ -848,3 +848,35 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.contact-page {
+  display: flex;
+  align-items: center;
+
+  form {
+    display: flex;
+    justify-content: center;
+    
+
+   ul {
+      padding: 0;
+      margin: 0;
+   }
+      li{
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      margin-bottom: 10px;
+     
+      overflow: hidden;
+      display: block;
+      clear: both;
+      position: relative;
+    
+      }
+
+  
+      
+    
+  }
+}
